--- a/src/app/(frontend)/styles.css
+++ b/src/app/(frontend)/styles.css
@@ -7,7 +7,7 @@
 @layer base {
   html {
     font-family: 'Montserrat', sans-serif;
-    @apply text-regular bg-[#F2F2F2] antialiased;
+    @apply text-regular bg-white  antialiased;
     font-size: 16px;
   }
 
