--- a/src/app/(frontend)/styles.css
+++ b/src/app/(frontend)/styles.css
@@ -7,19 +7,27 @@
 @layer base {
   html {
     font-family: 'Montserrat', sans-serif;
-    @apply text-regular bg-white  antialiased;
+    @apply bg-white text-regular antialiased;
     font-size: 16px;
   }
 
   h1 {
-    @apply text-4xl my-12 after:block after:w-full after:mt-1 after:h-[4px] after:content-[''] after:border-accent after:border-b after:border-t;
+    @apply after:block my-12 after:mt-1 after:border-accent after:border-t after:border-b after:w-full after:h-[4px] text-4xl after:content-[''];
   }
 
   h2 {
-    @apply text-3xl my-10 after:block after:w-full after:mt-1 after:h-[4px] after:content-[''] after:border-accent after:border-b after:border-t;
+    @apply after:block my-10 after:mt-1 after:border-accent after:border-t after:border-b after:w-full after:h-[4px] text-3xl after:content-[''];
   }
 
   h3 {
-    @apply text-xl my-8;
+    @apply my-8 text-xl;
+  }
+
+  a {
+    @apply transition-opacity duration-150;
+  }
+
+  a:hover {
+    opacity: 0.8;
   }
 }
